--- a/style.css
+++ b/style.css
@@ -1,24 +1,3 @@
-/*.label {*/
-/*    width: 235px;*/
-/*    text-align: right;*/
-/*}*/
-
-/*.calc-input {*/
-/*    display: table;*/
-/*}*/
-
-/*input {*/
-/*    width: 100%;*/
-/*}*/
-
-/*.suffix {*/
-/*    display: table-cell;*/
-/*    padding-left: 8px;*/
-/*}*/
-
-/*.fas {*/
-/*    display: table-cell;*/
-/*}*/
 .btn-floating.halfway-fab {
     bottom: 96px;
-}alf
+}
